# wolfox

./: .Xdefaults  .gitattributes  .gitignore  Hello.drawio  README.md  README.ml.md  Untitled Diagram.drawio  build_ollama.sh  hello.py  loop.sh  requirements.txt  test_foo.py  workspace.code-workspace
.devcontainer/: devcontainer.json
asp_study/: 20x20.in  Makefile  README.md  example1.lp  example2.lp  longest.lp  test.lp
deep_learning/: lab4_imp.py  lstm_from_scratch.py  main_vae.py  seq2seq_translation_tutorial.py
flow_proto1/: Rakefile  config.yaml  fbs.rb
ipython/: plot_digits_classification.ipynb
nim_study/: ex_json.nim  ex_varargs1.nim
nvim_config/: init.lua  lazy-lock.json  test.py
packaging_tutorial/: .gitignore  README.md  setup.py
python_cmdline/: blame-praise.py  solve_network.py
python_ml/: node2vec_study.py  test_nx_graph02.py  test_nx_graph04.py
python_pattern/: README.md
ruby/: flow_def.rb  test_system.rb  test_yard.rb
study_asyncio/: .pylintrc  test_async_executor.py  test_asyncio1.py  test_process_pool.py  test_process_poolv2.py  test_produce_comsume.py  test_produce_comsumev2.py
study_fastapi/: Jenkinsfile  main.py
study_geo/: compile.sh  main.c  main.cpp
study_llamaindex/: .gitignore  real_run01.py  test.py  test_chainlang01.py  test_chainlang02.py  test_chainlang03_milvus.py  test_chainlang04_history.py  test_chainlang05_history.py  test_chainlang_tutor_01.py  test_chainlit01.py  (+15 more)
study_llm/: .env.sample  hello_langchain.ipynb  key_how_to-return structured data from a model.ipynb  pyproject.toml  tutor-Build an Agent.ipynb
(+126 files in other folders)
