[tool.poetry]
name = "study-llm"
version = "0.1.0"
description = ""
authors = ["Ziyu Huang <ziyu4huang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.14"
chainlit = "^1.1.402"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
